--- a/profiles/templates/profiles/sidebar_um.html
+++ b/profiles/templates/profiles/sidebar_um.html
@@ -91,6 +91,11 @@
                             <a href="{% url 'unitmanagement:request_form'%}" class="item">
                                 <i class="exclamation icon"></i>Replenish Assets
                             </a>
+                            <a href="{% url 'unitmanagement:handler_incident_form'%}" class="item">
+                                <i class="id badge icon"></i>
+                                <i class="exclamation icon"></i>Handler Incident
+                                Form
+                            </a>
 
                             {% else %}
                             <a href="{% url 'deployment:deployment_area_details'%}" class="item">
