--- a/profiles/templates/profiles/handler_dashboard.html
+++ b/profiles/templates/profiles/handler_dashboard.html
@@ -237,24 +237,10 @@
     </div>
 <style>
 
-  #calendar .fc-dayGridMonth-view .fc-scroller {
-  overflow-x: hidden !important;
-  overflow-y: hidden !important;
-  }
-
-  .fc-center>h2 {
-     font-size:  18px !important; 
-     }
-
-  .fc-header, .fc-button, #prev, #next{
+#prev, #next{
   background-color:orangered;
   color: white;
-  }
-
-  #calendar {
-      max-width: 900px;
-      margin: 40px auto;
-  }
+}
 </style>
     
 <script>
