--- a/planningandacquiring/templates/planningandacquiring/add_K9_parents.html
+++ b/planningandacquiring/templates/planningandacquiring/add_K9_parents.html
@@ -172,7 +172,8 @@
                                      <input type="radio" id="radiom" name="radiom" value="{{m.id}}">
                                  </td>
                                  <td>
-                                     <a href="#" class="show_modal" id='{{m.id}}' style="color:green;">{{m.name}}</a>
+                                     <a href="#" class="show_modal" id='{{m.id}}'
+                                     style="color:green;">{{m.name}}</a>
                                  </td>
                                  <td>{{m.age}}</td>
                                  <td>{{m.breed}}</td>
@@ -180,7 +181,9 @@
                                  <td>{{b}}%</td>
                                  <td>{{m.litter_no}}</td>
                                  <td>{{s}}</td>
-                                 <td>Mate Today!</td>
+                                 <td>
+                                    <a href="#" class="btn_modal" data-name='{{f}}' id='{{m.id}}'>Mate Today!</a> 
+                                </td>
                              </tr>
                              {% else %}
                              <tr>
@@ -188,7 +191,8 @@
                                      <input type="radio" id="radiom" name="radiom" value="{{m.id}}">
                                  </td>
                                  <td>
-                                     <a href="#" class="show_modal" id='{{m.id}}' style="color:powderblue;">{{m.name}}</a>
+                                     <a href="#" class="show_modal" id='{{m.id}}' data-type ='health'
+                                     style="color:powderblue;">{{m.name}}</a>
                                  </td>
                                  <td>{{m.age}}</td>
                                  <td>{{m.breed}}</td>
@@ -196,7 +200,9 @@
                                  <td>{{b}}%</td>
                                  <td>{{m.litter_no}}</td>
                                  <td>{{s}}</td>
-                                 <td>{{m.last_proestrus_date|date:'m/d/Y'}}</td>
+                                 <td>
+                                    <a href="#" id='{{m.id}}' data-name='{{m}}' class="btn_modal" style="color:powderblue;">{{m.last_proestrus_date|date:'m/d/Y'}}</a> 
+                                  </td>
                              </tr>
                              {% endif %}
                              {% endfor %}
@@ -234,6 +240,7 @@
                         <th>Birth Success</th>
                         <th>Litter</th>
                         <th>Sick Record</th>
+                        <th>In-Heat Date</th>
                     </tr>
                 </thead>
   
@@ -249,6 +256,10 @@
                         <td>{{b}}%</td>
                         <td>{{f.litter_no}}</td>
                         <td>{{s}}</td>
+                        <td>
+                            <a href="#" id='{{f.id}}' data-name='{{f}}' class="btn_modal"
+                            style="color:powderblue;">{{f.last_proestrus_date|date:'m/d/Y'}}</a>
+                        </td>
                     </tr>
                     {% endfor %}
                 </tbody>
@@ -291,6 +302,29 @@
         </div>
       </div>
     </div>
+
+    <div class="ui small modal" id="mini_modal">
+        <div class="header">Header</div>
+        <div class="content">
+                <div class="ui info message">     
+                    <ul class="list">
+                        <li>Proestrus Stage is the In-Heat Duration</li>
+                    </ul>
+                </div>
+            <form action="{% url 'planningandacquiring:in_heat_change' %}" method="POST" class="ui form">
+                {% csrf_token %}
+                <input type="hidden" name="id_k9" id = 'id_k9'>
+                <div class="field">
+                    <label for="">In-Heat First Date:</label>
+                    <input type="date" name="date_change" id="">
+                </div>
+
+                <center>
+                    <button type="submit" class="ui green button">Submit</button>
+                </center>
+            </form>
+        </div>
+    </div>
 <script type="text/javascript">
 
 	$(document).ready(function() {
@@ -302,8 +336,15 @@
         $("#summary").slideToggle();
     });
 
+    $(".btn_modal").bind('click',function(){
+        var id = $(this).attr('id');
+        var name = $(this).data('name');
+        $('.header').text(name)
+        $('#id_k9').val(id)
+        $('.ui.small.modal').modal('show');
+    });
 
-		$('#tabledata1').DataTable({
+	$('#tabledata1').DataTable({
       "order": [[ 5, "desc" ],[ 6, "desc" ],[ 7, "asc" ]]
     });
     $('#tabledata2').DataTable({
@@ -334,6 +375,8 @@
     $(".show_modal" ).bind('click', function() {
             var id = $(this).attr('id')
             var k9 = $(this).text();
+            var type = $(this).data('type');
+         
             $('#id_health_data').modal('show');
             $('.header').text(id);
             
@@ -344,7 +387,8 @@
                 url: url,                    
                 data: {
                 'id': id,
-                'k9': k9,      
+                'k9': k9,
+                'type':type,      
                 },
                 success: function (data) {   
                 $("#id_health_data").html(data); 
