--- a/profiles/templates/profiles/commander_dashboard.html
+++ b/profiles/templates/profiles/commander_dashboard.html
@@ -3,53 +3,113 @@
   <p>Request = on leave, medicine, phyx, vaccine, equipment</p>
   <p>refresher</p> -->
 {% block dashboard %}
-  <div class="container fluid">
+<div class="container fluid">
     <div class="ui two column grid">
       <div class="streched row">
-        <div class="ten wide column"  style="padding-right: 0%;">
+        <div class="nine wide column"  style="padding-right: 0%;">
           <div class="ui basic segment">
-            <div class="ui stackable grid">        
+            <div class="ui stackable grid">
                 <div class="sixteen wide column">
-                    <div class="ui raised segment">
-                        <canvas id="myChart"></canvas>
-                        {{area}}
-                    </div>
-                </div>
-            </div>
-          </div>
-        </div>
-        <div class="six wide column" style="padding: 0%;padding-right: 1%;">
-            <div class="ui basic segment" style="padding-left: 0%;">
-                
-                    <div class="ui black floating message">
-                        <p>Mini calendar</p>
+                    <div class="ui equal width height grid">
+                        <div class="column">
+                          <div class="ui raised segment">
+                              <div class="card">
+                                  <div class="content">
+                                      <i class="huge syringe blue icon pop">{{vac_pending}}</i>
+                                  </div>
+                                  <div class="extra content">
+                                      <strong>
+                                          <a href="#">Pending Event Request</a>
+                                      </strong>
+                                  </div>
+                              </div> 
+                          </div>
+                           
+                        </div>
                       </div>
-                    <div class="ui orange floating message"  style="margin: 0%;padding:0%;">   
-    
-                        <table class="ui basic table">
-                          <tr>
-                            <td>Info Here</td>
-                            <td class="center aligned three wide">
-                              <a href="#" class="ui tiny black button">Details</a>
-                            </td>
-                          </tr>
-                        </table>
-                    </div>
+                </div>
 
-                    <div class="ui red floating message"  style="margin: 0%;padding:0%;">   
-                      <ul>
-                        <li>Reminder</li>
-                        <li>Request</li>
-                        <li>Todo List: daily, weekly, monthly</li>
-                      </ul>
-                    </div>
+           
             </div>
+        </div>
+        </div>
+        <div class="seven wide column" style="padding: 0%;padding-right: 1%;">
+            <div class="ui basic segment"> 
+              <div class="ui inverted segment">
+                <h4>Calendar</h4>
+              </div>
+                <div class="ui right aligned basic segment"
+                style="padding:0%;margin:0%;margin-bottom:5px">
+                    <div class="ui buttons">
+                        <button class="ui button"  id = "prev" >Previous Year</button>
+                        <div class="or"></div>
+                        <button class="ui button"  id = "next" >Next Year</button>
+                      </div>
+                
+                </div>
+        
+                <div id = "calendar" style="margin-top:0%;"></div>
+             </div> 
           </div>
         </div>
-    </div>
-    </div>
+    </div>    
+</div>
+<style>
+    #prev, #next{
+      background-color:orangered;
+      color: white;
+    }
+    </style>
 <script>
 $(document).ready(function() {
+  $('#calendar').fullCalendar({
+          header: {
+              left: 'prev,next today',
+              center: 'title',
+              right: 'month,agendaWeek,agendaDay'
+          },
+
+          defaultView: 'month',
+          weekNumbers: 'true',
+          editable: true,
+          selectable: true,
+          eventLimit: 3,
+          nowIndicator: true,
+
+          eventTextColor: "white",
+
+
+          events: [
+                {% for i in events %}
+                {
+                    id: '{{ i.id }}',
+                    title: '{{i.event_name}}',
+                    start: '{{ i.start_date|date:"Y-m-d" }}',
+                    end: '{{ i.end_date|date:"Y-m-d" }}',
+                    allDay: 'true',
+                },
+                {% endfor %}
+            ],
+            dayClick: function(date) {
+                new_date = date.getFullYear() + '-' + date.getMonth() + '-' + date.getDate();
+                var view = $('#calendar').fullCalendar('getView');
+
+                    $('#calendar').fullCalendar('gotoDate',date);
+                    $('#calendar').fullCalendar('changeView', 'agendaDay');
+
+                },
+
+          });
+
+
+
+      $('#prev').click(function() {
+      $('#calendar').fullCalendar('prevYear');
+      });
+
+      $('#next').click(function() {
+      $('#calendar').fullCalendar('nextYear');
+      });
     var endpoint = '../../unitmanagement/commander/api'
     var performance = []
     $.ajax({
