--- a/profiles/templates/profiles/sidebar_um.html
+++ b/profiles/templates/profiles/sidebar_um.html
@@ -32,6 +32,10 @@
                             <a href="{% url 'unitmanagement:k9_checkup_pending'%}" class="item">
                                 <i class="calendar icon"></i>Schedule K9 Checkups for Initial Deployment
                             </a>
+                            <a href="{% url 'unitmanagement:due_retired_list'%}" class="item">
+                                    <i class="clipboard list icon"></i>Due for
+                                    Retirement List
+                                </a> 
                             {% elif request.session.session_user_position == "Veterinarian" %}
                             <!-- <a href="{% url 'profiles:add_User_form'%}" class="item">
                                 <i class="user plus icon"></i>Add User Form
